messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: ClusterIP
  selector:
    # This selector determines which pods receive traffic.
    # Initially, it points to the 'blue' deployment.
    # To switch to the green deployment, you will change 'version' to 'green'.
    app: django
    version: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
